# Checkpoint25_final_project_ros1_and_ros1_bridge

./: README.md
Universal_Robots_ROS2_Description/: CMakeLists.txt  package.xml
Universal_Robots_ROS2_Description/launch/: robot_description.launch
Universal_Robots_ROS2_Description/urdf/: ur.urdf.xacro
launch_cp25_ros1/: CMakeLists.txt  package.xml
launch_cp25_ros1/config/: bridge.yaml  bridge_realrobot.yaml
launch_cp25_ros1/launch/: ros1_realrobot_tf2_webbridge.launch.xml  ros1_tf2_webbridge.launch.xml
launch_cp25_ros1/rviz/: rviz_ros1_realrobot.rviz  rviz_ros1_simrobot.rviz
rg2_gripper_description/: CMakeLists.txt  package.xml
rg2_gripper_description/meshes/: aruco_marker1.dae  aruco_marker_8mm.dae  arucomarker45mm.dae
rg2_gripper_description/urdf/: rg2_gripper.urdf.xacro
robotnik_sensors/robotnik_sensors/: CMakeLists.txt  package.xml
robotnik_sensors/robotnik_sensors/urdf/: all_sensors.urdf.xacro  intel_d415.urdf.xacro  intel_r430.urdf.xacro
